--- a/mirage_site/static/mirage_site/css/layouts/blog.css
+++ b/mirage_site/static/mirage_site/css/layouts/blog.css
@@ -35,14 +35,13 @@ h3 {
     color: #4A84A3;
 }
 
-h4 {
+h4.inline {
     display: inline-block;
     float: left;
     margin: 0em;
     font-weight: 700;
     color: #4A84A3;
     font-size: 1.17em;
-
 }
 
 /* LAYOUT CSS */
@@ -81,7 +80,6 @@ h4 {
     font-weight: 300;
     color: rgb(176, 202, 219);
 }
-
 
 .nav-list {
     margin: 0;
@@ -153,19 +151,19 @@ h4 {
     width: 1100px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #;
+    background-color: #fff;
 }
 
 #container {
     width: 1100px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #;
+    background-color: #fff;
 }
 
-#header {
+#mirage_header {
     width: 100%;
-    background-color: #;
+    background-color: #fff;
     margin-top: 5px;
 }
 
