--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -2,13 +2,14 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Mirage</title>
+        <title>{% block title %}Mirage{% endblock %}</title>
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
+        {% block scripts %}
         <script src="{% static 'mirage_site/js/jquery-1.11.1.min.js' %}"></script>
         <script src="{% static 'mirage_site/js/select2.min.js' %}"></script>
         <script src="{% static 'mirage_site/js/jquery.fireOnDisable.js' %}"></script>
@@ -23,6 +24,7 @@
         <script>
         var static_image_path = "{% static 'mirage_site/images/' %}";
         </script>
+        {% endblock %}
 
         <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/pure-min.css' %}">
         <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/base-min.css' %}">
@@ -30,7 +32,6 @@
 
         {% block css %}
         {% endblock %}
-
 
         <!--[if lte IE 8]>
         <link rel="stylesheet" href="{% static 'mirage_site/css/pure-release-0.5.0/grids-responsive-old-ie-min.css' %}">
@@ -51,14 +52,14 @@
         <![endif]-->
 
         <!--[if lt IE 9]>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7/html5shiv.js"></script>
         <![endif]-->
     </head>
     <body>
-
+        {% block page_top %}
         <div id="page_top_container">
             <div id="skiptocontent"><a href="#skip" class="">skip to main content</a></div>
-            <div id="header">
+            <div id="mirage_header">
                 <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
                     <div class="logo"><img src="{% static 'mirage_site/images/logo.png' %}"></div>
@@ -70,9 +71,10 @@
                 </div><!--end page_title<!-->
             </div><!--end header<!-->
         </div><!--end page_top_container<!-->
+        {% endblock %}
 
-                {% block header %}
-                {% endblock header %}
+        {% block header %}
+        {% endblock %}
 
         <div id="container">
 
@@ -125,14 +127,6 @@
                 </div><!--end logo_container<!-->
             </div><!--end footer<!-->
         </div><!--end footer_container<!-->
-
-        <style>
-        /*  #naics-code { width: 100%; }
-          #search { margin-left: 0; }
-        */
-        </style>
-
-
 
         <script src="{% static 'mirage_site/js/mediator.min.js' %}"></script>
         {% block page_js %}
