--- a/mirage_site/templates/api_theme/index.html
+++ b/mirage_site/templates/api_theme/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block title %}
-API Documentation / Mirage Market Research
+API Documentation - Discovery Market Research
 {% endblock %}
 
 {% block css %}
