--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -39,7 +39,7 @@
                 <h4 class="inline data_source_name">FPDS</h4>
                 <span id="data_source_date_fpds"></span>
                 <span id="data_source_last_updated">last updated</span>
-                <span class="data_source_description"><br>Mirage loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each OASIS vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
+                <span class="data_source_description"><br>Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each OASIS vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
             </div><!-- end data_sources_row -->
         </div><!-- end data_sources -->
     <!-- END LANDING HTML -->    
