update logo to retina

--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -63,7 +63,7 @@
                 <div id="header_link"><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></div>
                 <div id="page_title">
                     <a href="/">
-                        <div class="oasis_title"><img alt="Discovery Logo" src="{% static "mirage_site/images/discovery.png" %}" />
+                        <div class="oasis_title"><img alt="Discovery Logo" width="341px" height="55px" src="{% static "mirage_site/images/discovery.png" %}" />
                         </div>
                     </a>
                 </div><!--end page_title<!-->
