data name style fix

--- a/mirage_site/templates/index.html
+++ b/mirage_site/templates/index.html
@@ -28,7 +28,7 @@
             <h1>Data Sources</h1>
 
             <div class="data_sources_row">
-                <h4 class="inline data_source_name">SAM</h4>
+                <h4 class="data data_source_name">SAM</h4>
 
                 <span id="data_source_date_sam"></span>
                 <span id="data_source_last_updated">last updated</span>
@@ -36,7 +36,7 @@
             </div><!-- end data_sources_row -->
 
             <div class="data_sources_row">
-                <h4 class="inline data_source_name">FPDS</h4>
+                <h4 class="data data_source_name">FPDS</h4>
                 <span id="data_source_date_fpds"></span>
                 <span id="data_source_last_updated">last updated</span>
                 <span class="data_source_description"><br>Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each OASIS vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
