--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -12,6 +12,9 @@
         {% block scripts %}
         <script type="text/javascript">
             var APIHOST = "{{API_HOST}}";
+            if (APIHOST.substring(APIHOST.length - 1) == '/') {
+                APIHOST = APIHOST.substring(0, APIHOST.length - 1);
+            }
             var APIKEY = "{{API_KEY}}";
         </script>
         <script src="{% static 'mirage_site/js/jquery-1.11.1.min.js' %}"></script>
