--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -153,7 +153,7 @@
         <!-- Digital Analytics Program roll-up, see https://analytics.usa.gov for data -->
         <script id="_fed_an_ua_tag" src="https://analytics.usa.gov/dap/dap.min.js"></script>
         <!-- Ethnio Activation Code -->
-<script type="text/javascript" language="javascript" src="//ethn.io/41979.js" async="true" charset="utf-8"></script>
+<script type="text/javascript" language="javascript" src="https://ethn.io/41979.js" async="true" charset="utf-8"></script>
     </body>
 
 </html>
