passing value through to the template for vendor capability statement

--- a/mirage_site/templates/vendor.html
+++ b/mirage_site/templates/vendor.html
@@ -61,6 +61,9 @@
                 </div>
             </div><!-- end vendor_socioeconomic_table_container -->
             <a id="csv_link" href="#"><div id="download_data">download vendor data (CSV)</div></a>
+            {% if has_capability_statement %}
+                PDF
+            {% endif %}
 
         </div><!-- end vendor_admin_c1 -->
 
