--- a/mirage_site/templates/base.html
+++ b/mirage_site/templates/base.html
@@ -157,7 +157,7 @@
         </script>
 
         <!-- Digital Analytics Program roll-up, see https://analytics.usa.gov for data -->
-        <script id="_fed_an_ua_tag" src="https://analytics.usa.gov/dap/dap.min.js"></script>
+        <script async type="text/javascript" src="https://dap.digitalgov.gov/Universal-Federated-Analytics-Min.js?agency=GSA" id="_fed_an_ua_tag"></script>
     </body>
 
 </html>
