Removing OASIS from the search filter text in the search_base template.

--- a/discovery_site/templates/search_base.html
+++ b/discovery_site/templates/search_base.html
@@ -26,7 +26,7 @@
 
 
         <div id="filter_container">
-            <span class="select_text" id="choose_filters">Choose filters (OASIS SB Only)</span>
+            <span class="select_text" id="choose_filters">Choose filters (SB Only)</span>
             <div id="filter" class="filterbox">
                 <form id="setaside-filters" class="pure-form pure-form-stacked" title="3. Choose Filters (OASIS SB Only)">
                     <fieldset>
@@ -53,6 +53,6 @@
 
     {% block search_info %}
     {% endblock %}
-    
+
 </div><!-- end main_container -->
 {% endblock body %}
