Updating content and adding JQuery collapsible include in the index template.

--- a/discovery_site/templates/index.html
+++ b/discovery_site/templates/index.html
@@ -3,26 +3,31 @@
 
 {% block content %}
         <!-- BEGIN LANDING HTML -->
-        <div id="about_oasis">
-            <h1>About OASIS</h1>
+        <div id="about_discovery">
+            <h1>About Discovery</h1>
 
-            <h3>The OASIS Family of Contract Vehicles</h3>
+            <p class="about_discovery_text">Discovery is a market research tool for GSA Contract Vehicles. Currently, it features GSA IDIQ vehicles, with more contracts coming in the future. Use Discovery to search vendor history for the awarded contractors and NAICs of the various IDIQs. Each contract is separated into Unrestricted and Small Business (SB) to make it easy to reserve task orders for small business categories.</p>
 
-            <ul class="about_oasis_text">
-                <li>Specifically designed for the acquisition of professional services</li>
-                <li>Enables the use of ANY contract type </li>
-                <li>Separated into unrestricted (OASIS) and Small Business (OASIS SB) to make it easy to reserve task orders for small business categories</li>
-                <li>All vendors have DCAA-vetted financial systems</li>
-            </ul>
-
+            <h3>Discovery Contract Vehicles</h3>
+            <div id="discovery_vehicles" class="about_discovery_text collapse-container">
+                <h1 class="vehicle"><span class="arrow-d"></span>One Acquisition Solution for Integrated Services (<b>OASIS</b>)</h1>
+                <div>
+                    <ul class="attr">
+                        <li>Specifically designed for the acquisition of professional services</li>
+                        <li>Enables the use of ANY contract type</li>
+                        <li>All vendors have DCAA-vetted financial systems</li>
+                        <li><a class="learn_more" href="https://www.gsa.gov/acquisition/products-services/professional-services/one-acquisition-solution-for-integrated-services-oasis">Learn more about OASIS</a></li>
+                    </ul>
+                </div>
+            </div>
 
             <h3>What are Pools?</h3>
-            <ul class="about_oasis_text">
-                <li>OASIS spans seven major functional categories that are referred to as pools. </li>
-                <li>Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories. </li>
+            <ul class="about_discovery_text">
+                <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools.</li>
+                <li>Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories.</li>
                 <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool.</li>
             </ul>
-        </div><!-- end about_oasis -->
+        </div><!-- end about_discovery -->
 
         <div id="data_sources">
             <h1>Data Sources</h1>
@@ -32,20 +37,21 @@
 
                 <span id="data_source_date_sam"></span>
                 <span id="data_source_last_updated">last updated</span>
-                <span class="data_source_description"><br>We pull SAM data directly from the System for Award Management (SAM) to provide supplemental information on all of the vendors in OASIS, including their SAM registration date, any potential suspensions or debarments, and the NAICS codes that a vendor may contract under.</span>
+                <span class="data_source_description">We pull SAM data directly from the System for Award Management (SAM) to provide supplemental information on all of the vendors on the included contracts, including their SAM registration date, any potential suspensions or debarments, and the NAICS codes that a vendor may contract under.</span>
             </div><!-- end data_sources_row -->
 
             <div class="data_sources_row">
                 <h4 class="data data_source_name">FPDS</h4>
                 <span id="data_source_date_fpds"></span>
                 <span id="data_source_last_updated">last updated</span>
-                <span class="data_source_description"><br>Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each OASIS vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
+                <span class="data_source_description">Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
             </div><!-- end data_sources_row -->
         </div><!-- end data_sources -->
     <!-- END LANDING HTML -->
 {% endblock %}
 
 {% block page_js %}
+    <script src="{% static 'discovery_site/js/jquery.collapsible.min.js' %}"></script>
     <script src="{% static 'discovery_site/js/requests-manager-listings.js' %}"></script>
     <script src="{% static 'discovery_site/js/layout-manager-listings.js' %}"></script>
     <script src="{% static 'discovery_site/js/requests-manager-index.js' %}"></script>
