Some content updates to the homepage index template.

--- a/discovery_site/templates/index.html
+++ b/discovery_site/templates/index.html
@@ -6,9 +6,10 @@
         <div id="about_discovery">
             <h1>About Discovery</h1>
 
+            <h3>Discovery</h3>
             <p class="about_discovery_text">Discovery is a market research tool for GSA Contract Vehicles. Currently, it features GSA IDIQ vehicles, with more contracts coming in the future. Use Discovery to search vendor history for the awarded contractors and NAICs of the various IDIQs. Each contract is separated into Unrestricted and Small Business (SB) to make it easy to reserve task orders for small business categories.</p>
 
-            <h3>Discovery Contract Vehicles</h3>
+            <h3>Contract Vehicles</h3>
             <div id="discovery_vehicles" class="about_discovery_text collapse-container">
                 <h1 class="vehicle"><span class="arrow-d"></span>One Acquisition Solution for Integrated Services (<b>OASIS</b>)</h1>
                 <div>
