Updating the GitHub repository url in the base template.

--- a/discovery_site/templates/base.html
+++ b/discovery_site/templates/base.html
@@ -117,7 +117,7 @@
                 <div id="footer_nav">
                     <ul>
                         <li><a href="http://www.gsa.gov/oasis">OASIS Program Home</a></li>
-                        <li><a href="https://github.com/18F/discovery"><img alt="GitHub Logo" src="{% static 'discovery_site/images/github_icon.png' %}"> Check out our code on GitHub</a></li>
+                        <li><a href="https://github.com/PSHCDevOps/discovery"><img alt="GitHub Logo" src="{% static 'discovery_site/images/github_icon.png' %}"> Check out our code on GitHub</a></li>
                     <!--    <li><a href="/docs/">Read the API documentation</a></li>-->
                     </ul>
 
