--- a/discovery_site/templates/base.html
+++ b/discovery_site/templates/base.html
@@ -18,6 +18,7 @@
             var APIKEY = "{{API_KEY}}";
         </script>
         <script src="{% static 'discovery_site/js/jquery-1.11.1.min.js' %}"></script>
+        <script src="{% static 'discovery_site/js/jquery-ui-1.12.1.min.js' %}"></script>
         <!--[if lte IE 9]>
         <script src="{% static 'discovery_site/js/jquery.xdomainrequest.min.js' %}"></script>
         <![endif]-->
