Updating SAM information in the index template.

--- a/discovery_site/templates/index.html
+++ b/discovery_site/templates/index.html
@@ -33,19 +33,20 @@
         <div id="data_sources">
             <h1>Data Sources</h1>
 
-            <div class="data_sources_row">
+            <div id="data_source_sam" class="data_sources_row">
                 <h4 class="data data_source_name">SAM</h4>
 
                 <span id="data_source_date_sam"></span>
                 <span id="data_source_last_updated">last updated</span>
-                <span class="data_source_description">We pull SAM data directly from the System for Award Management (SAM) to provide supplemental information on all of the vendors on the included contracts, including their SAM registration date, any potential suspensions or debarments, and the NAICS codes that a vendor may contract under.</span>
+                <span id="data_source_description_sam" class="data_source_description">We pull SAM data directly from the System for Award Management (SAM) to provide supplemental information on all of the vendors on the included contracts, including their SAM registration date, any potential suspensions or debarments, and the NAICS codes that a vendor may contract under. Set aside information is based on current SAM registration and may not be consistent with the contract vehicle being researched. <a href="#data_sources" id="data_source_more_info_sam">More Info</a></span>
+                <div id="data_source_dialog_sam" style="display: none"><span>Contractors are required to re-certify size/socioeconimic at least annually in SAM in accordance with <a href="https://www.acquisition.gov/sites/default/files/current/far/html/Subpart%204_12.html#wp1073667" target="_blank">FAR 4.120(b)(1)</a>. Contrast that with the contract frequency every five years (or Novation/merger) in accordance with <a href="https://www.acquisition.gov/sites/default/files/current/far/html/52_217_221.html#wp1139913" target="_blank">FAR 52.219-28</a>. Hence the size/socioeconomic status shown in SAM may differ from the contract and thus cannot be relied upon for orders issued under the contract which default to the size/socioeconomic status in the contract. Refer to the contract vehicle website to determine the current size/socioeconomic status of a particular contractor under that contract vehicle. )</span></div>
             </div><!-- end data_sources_row -->
 
-            <div class="data_sources_row">
+            <div id="data_source_fpds"  class="data_sources_row">
                 <h4 class="data data_source_name">FPDS</h4>
                 <span id="data_source_date_fpds"></span>
                 <span id="data_source_last_updated">last updated</span>
-                <span class="data_source_description">Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
+                <span id="data_source_description_fpds"  class="data_source_description">Discovery loads data from the Federal Procurement Data System (FPDS) to automatically provide you with a context-rich contract history for each vendor, including the amount of the contract, the primary NAICS code and the pricing type.</span>
             </div><!-- end data_sources_row -->
         </div><!-- end data_sources -->
     <!-- END LANDING HTML -->
