--- a/discovery_site/static/discovery_site/css/layouts/blog.css
+++ b/discovery_site/static/discovery_site/css/layouts/blog.css
@@ -478,6 +478,55 @@ h4.data {
     font-size: 1.17em;
 }
 
+#data_source_more_info_sam {
+    font-weight: 500;
+}
+
+
+#data_source_dialog_sam {
+    background-color: #fff;
+    margin: 5px;
+    padding: 15px;
+    font-weight: 300;
+}
+
+.ui-dialog {
+    background-color: #fff;
+    margin: 5px;
+    padding: 5px;
+    border: 1px solid #eee;
+}
+.ui-dialog-titlebar {
+    background-color: #fff;
+    margin: 5px;
+    padding: 5px;
+}
+
+.ui-dialog-title {
+    margin: 0em;
+    font-weight: 700;
+    color: #4A84A3;
+    font-size: 1.17em;
+}
+
+.ui-dialog-titlebar-close {
+    background-color: #fff;
+    color: #D60006;
+    font-weight: 1000;
+    text-align: center;
+    float: right;
+    border: 1px solid #eee;
+    padding: 4px 5px 2px 5px;
+}
+
+
+.ui-dialog-titlebar-close:hover {
+    background-color: #D60006;
+    color: #000;
+    font-weight: 1000;
+    border: 1px solid #eee;
+}
+
 #data_source_date_fpds {
     float: right;
     font-weight: 600;
