Adding an OASIS NAICS code document link in the index template.

--- a/discovery_site/templates/index.html
+++ b/discovery_site/templates/index.html
@@ -17,6 +17,7 @@
                         <li>Specifically designed for the acquisition of professional services</li>
                         <li>Enables the use of ANY contract type</li>
                         <li>All vendors have DCAA-vetted financial systems</li>
+                        <li><a href="https://www.gsa.gov/cdnstatic/NAICS%20Code%20Definitions%20for%20OASIS.pdf" target="_blank">Download the NAICS description document showing NAICS Codes per pool</a></li>
                         <li><a class="learn_more" href="https://www.gsa.gov/acquisition/products-services/professional-services/one-acquisition-solution-for-integrated-services-oasis">Learn more about OASIS</a></li>
                     </ul>
                 </div>
