Updating the pool list items in the index template.

--- a/discovery_site/templates/index.html
+++ b/discovery_site/templates/index.html
@@ -26,8 +26,10 @@
             <h3>What are Pools?</h3>
             <ul class="about_discovery_text">
                 <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools.</li>
-                <li>Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories.</li>
-                <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool.</li>
+                <li>Each pool is it’s own IDIQ contract, which may contain multiple NAICS codes.</li>
+                <li>You may only issue a solicitation to one of these pools.</li>
+                <li>The size standard of a pool applies to all NAICS within it.</li>
+                <li>If your contracting need spans multiple categories, select the most relevant NAICS code for your requirement.</li>
             </ul>
         </div><!-- end about_discovery -->
 
