--- a/discovery_site/static/discovery_site/css/layouts/blog.css
+++ b/discovery_site/static/discovery_site/css/layouts/blog.css
@@ -482,6 +482,16 @@ h4.data {
     font-weight: 500;
 }
 
+#data_source_dialog_sam_wrapper {
+    position: fixed;
+    display: none;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.8);
+    z-index: 500;
+}
 
 #data_source_dialog_sam {
     background-color: #fff;
@@ -495,6 +505,7 @@ h4.data {
     margin: 5px;
     padding: 5px;
     border: 1px solid #eee;
+    z-index: 999;
 }
 .ui-dialog-titlebar {
     background-color: #fff;
@@ -518,7 +529,6 @@ h4.data {
     border: 1px solid #eee;
     padding: 4px 5px 2px 5px;
 }
-
 
 .ui-dialog-titlebar-close:hover {
     background-color: #D60006;
