Adding sort classes and title in the pool template.

--- a/discovery_site/templates/pool.html
+++ b/discovery_site/templates/pool.html
@@ -29,13 +29,13 @@
     <div id="pool_table" class="pooldetail">
         <table id="pool_vendors">
             <tr>
-                <td scope="col" class="h_vendor_name">
+                <td scope="col" class="h_vendor_name arrow-sortable sortable" title="Select to sort">
                     Vendor Name
                 </td>
-                <td scope="col" class="h_vendor_location">
+                <td scope="col" class="h_vendor_location arrow-sortable sortable" title="Select to sort">
                     Location
                 </td>
-                <td scope="col" class="h_naics_results">
+                <td scope="col" class="h_naics_results arrow-down sortable" title="Sorted descending">
                     No. of Contracts
                 </td>
                 <td scope="col" class="h_8a">
