Adding a contracts table id in the vendor template.

--- a/discovery_site/templates/vendor.html
+++ b/discovery_site/templates/vendor.html
@@ -98,7 +98,7 @@
         </div><!-- end vendor_contract_history_title_container -->
 
         <div id="ch_table" class="contracthistory">
-            <table>
+            <table id="vendor_contracts">
                 <tr>
                     <th scope="col" class="h_date_signed arrow-down sortable" title="Sorted descending" tabindex="0">
                         Date Signed
