Updating the vendor contracts table fields in the vendor template.

--- a/discovery_site/templates/vendor.html
+++ b/discovery_site/templates/vendor.html
@@ -103,20 +103,20 @@
                     <th scope="col" class="h_date_signed arrow-down sortable" title="Sorted descending" tabindex="0">
                         Date Signed
                     </th>
-                    <th scope="col" class="h_piid">
+                    <th scope="col" class="h_piid arrow-sortable sortable" title="Select to sort" tabindex="0">
                         PIID
                     </th>
                     <th scope="col" class="h_agency arrow-sortable sortable" title="Select to sort" tabindex="0">
                         Agency
                     </th>
-                    <th scope="col" class="h_type">
+                    <th scope="col" class="h_type arrow-sortable sortable" title="Select to sort" tabindex="0">
                         Type
+                    </th>
+                    <th scope="col" class="h_location arrow-sortable sortable" title="Select to sort" tabindex="0">
+                        Location
                     </th>
                     <th scope="col" class="h_value arrow-sortable sortable" title="Select to sort" tabindex="0">
                         Value ($)
-                    </th>
-                    <th scope="col" class="h_email_poc">
-                        Email POC
                     </th>
                     <th scope="col" class="h_status arrow-sortable sortable" title="Select to sort" tabindex="0">
                         Status
