Combining discovery and discovery_site into app discovery (with some utils and settings updates).

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -9,8 +9,10 @@
             <form id="vehicle-select">
                 <select id="placeholder" class="vehicle_select_style" title="1. Select a vehicle">
                     <option></option>
-                    <option value="oasissb">OASIS SB</option>
+                    <option value="oasis_sb">OASIS SB</option>
                     <option value="oasis">OASIS Unrestricted</option>
+                    <option value="hcats_sb">HCATS SB</option>
+                    <option value="hcats">HCATS Unrestricted</option>
                 </select>
             </form>
         </div><!-- end vehicle_select -->
