Updating the Javascript versions in the API theme template.

--- a/app/discovery/templates/api_theme/index.html
+++ b/app/discovery/templates/api_theme/index.html
@@ -52,16 +52,16 @@ API Documentation - Discovery Market Research
 
 {% block page_js %}
   <script src="{% static 'rest_framework_swagger/lib/shred.bundle.js' %}"></script>
-  <script src='{% static "rest_framework_swagger/lib/jquery-1.8.0.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/jquery-3.3.1.min.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/jquery.slideto.min.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/jquery.wiggle.min.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/jquery.ba-bbq.min.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/jquery.cookie.js" %}'></script>
-  <script src='{% static "rest_framework_swagger/lib/handlebars-1.0.0.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/underscore-min.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/backbone-min.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/swagger.js" %}'></script>
-  <script src='{% static "rest_framework_swagger/swagger-ui.min.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/lib/handlebars.min-v3.0.3.js" %}'></script>
+  <script src='{% static "rest_framework_swagger/swagger-ui.js" %}'></script>
   <script src='{% static "rest_framework_swagger/lib/highlight.8.0.pack.js" %}'></script>
   <script>
 
