--- a/app/discovery/templates/base.html
+++ b/app/discovery/templates/base.html
@@ -6,6 +6,7 @@
         <title>{% block title %}Discovery{% endblock %}</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="shortcut icon" href="{% static 'discovery_site/images/favicon.ico' %}" />
 
         <link href='https://fonts.googleapis.com/css?family=Raleway:400,500,600,700|Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
 
