Adding BMO vehicles to the base search template vehicle dropdown.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -13,6 +13,8 @@
                     <option value="oasis">OASIS Unrestricted</option>
                     <option value="hcats_sb">HCATS SB</option>
                     <option value="hcats">HCATS Unrestricted</option>
+                    <option value="bmo_sb">BMO SB</option>
+                    <option value="bmo">BMO Unrestricted</option>
                 </select>
             </form>
         </div><!-- end vehicle_select -->
