Removing the oasis name on the poc in the vendor template.

--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -77,7 +77,7 @@
         </div><!-- end vendor_admin_c2 -->
 
         <div id="vendor_admin_c3">
-            <p class="admin_title">OASIS POC</p>
+            <p class="admin_title">POC</p>
             <p class="lh"><span class="admin_label"></span><span class="vendor_address1 admin_data2"></span></p>
             <p class="lh"><span class="admin_label"></span><span class="vendor_address2 admin_data2"></span></p>
             <p class="lh"><span class="admin_label"></span><span class="vendor_poc_name admin_data2"></span></p>
