Removing the oasis name from the base search template.

--- a/app/discovery/templates/search_base.html
+++ b/app/discovery/templates/search_base.html
@@ -30,7 +30,7 @@
         <div id="filter_container">
             <span class="select_text" id="choose_filters">Choose filters (SB Only)</span>
             <div id="filter" class="filterbox">
-                <form id="setaside-filters" class="pure-form pure-form-stacked" title="3. Choose Filters (OASIS SB Only)">
+                <form id="setaside-filters" class="pure-form pure-form-stacked" title="3. Choose Filters (SB Only)">
                     <fieldset>
                         <div id="filter_c1">
                             <label class="pure-checkbox" for="eight_a" title="choose_filter_8a"><input class="se_filter" type="checkbox" id="eight_a" name="8a" value="A6" aria-labeledby="choose_filters" {% if "A6" in request.GET.setasides %}checked{% endif %} />8(a)</label>
