Including information about new vehicles in the index template.

--- a/app/discovery/templates/index.html
+++ b/app/discovery/templates/index.html
@@ -21,15 +21,33 @@
                         <li><a class="learn_more" href="https://www.gsa.gov/acquisition/products-services/professional-services/one-acquisition-solution-for-integrated-services-oasis">Learn more about OASIS</a></li>
                     </ul>
                 </div>
+                <h1 class="vehicle"><span class="arrow-d"></span>Building Maintenance and Operations (<b>BMO</b>)</h1>
+                <div>
+                    <ul class="attr">
+                        <li>Provides a broad and comprehensive range of BMO services for use throughout</li>
+                        <li>Provides a regionally focused pool of highly qualified large and small contractors</li>
+                        <li>Allows flexibility for contract types, including fixed price, labor hour, time and materials, and hybrids</li>
+                        <li>Leverages spend in acquiring services in an effective, economical, and expedient manner resulting in both significant cost and time savings</li>
+                        <li><a class="learn_more" href="https://www.gsa.gov/acquisition/purchasing-programs/federal-strategic-sourcing-initiative/building-maintenance-and-operations)">Learn more about BMO</a></li>
+                    </ul>
+                </div>
+                <h1 class="vehicle"><span class="arrow-d"></span>Human Capital and Training Solutions (<b>HCaTS</b>)</h1>
+                <div>
+                    <ul class="attr">
+                        <li>Result of partnership between Office of Personnel Management (OPM) and General Services Administration (GSA)</li>
+                        <li>Provides customized Training and Development, Human Capital Strategy, and  Organizational Performance Improvement Services</li>
+                        <li>Highest Technically Rated with Fair and Reasonable (HTR-FRP) Contractors that have been pre-screened by HC specialists</li>
+                        <li>Leveraged Category and Performance Management Strength</li>
+                        <li><a class="learn_more" href="https://www.gsa.gov/hcats">Learn more about HCaTS</a></li>
+                    </ul>
+                </div>
             </div>
 
             <h3>What are Pools?</h3>
             <ul class="about_discovery_text">
-                <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools.</li>
-                <li>Each pool is it’s own IDIQ contract, which may contain multiple NAICS codes.</li>
-                <li>You may only issue a solicitation to one of these pools.</li>
-                <li>The size standard of a pool applies to all NAICS within it.</li>
-                <li>If your contracting need spans multiple categories, select the most relevant NAICS code for your requirement.</li>
+                <li>Discovery’s IDIQs are divided into functional categories that are referred to as pools</li>
+                <li>Each pool is it’s own IDIQ contract: Therefore you may only publish a solicitation to one of these categories</li>
+                <li>If your contracting need spans multiple categories, choose the one that contains the preponderance of your work. Selecting the most relevant NAICS code above will guide you to the correct pool</li>
             </ul>
         </div><!-- end about_discovery -->
 
