Minor CSS tweak for collapsible items on homepage.

--- a/app/discovery/static/discovery_site/css/layouts/blog.css
+++ b/app/discovery/static/discovery_site/css/layouts/blog.css
@@ -405,6 +405,7 @@ h4.data {
 #discovery_vehicles h1.vehicle {
   font-size: 1.0em;
   padding-bottom: 10px;
+  cursor: pointer;
 }
 
 #discovery_vehicles .learn_more {
