Removing the default label for the contract table display in the vendor template.

--- a/app/discovery/templates/vendor.html
+++ b/app/discovery/templates/vendor.html
@@ -91,7 +91,7 @@
     <div id="vendor_contract_history_container">
 
         <div id="vendor_contract_history_title_container">
-            <span class="vendor_contract_history_text">Showing this vendor's complete contract history for: </span>
+            <span class="vendor_contract_history_text"></span>
             <!-- <span class="vendor_contract_history_naics"></span> -->
             <div tabindex="0" id="naics_contracts_button" class="contracts_button" title="load this vendor's contract history for this NAICS in the table below">NAICS 12345</div>
             <div tabindex="0" id="all_contracts_button" class="contracts_button" title="load this vendor's contract history for all past contracts in the table below">All Contracts</div>
