--- a/app/discovery/templates/base.html
+++ b/app/discovery/templates/base.html
@@ -25,7 +25,9 @@
         <script src="{% static 'discovery_site/js/contrib/select2.min.js' %}"></script>
         <script src="{% static 'discovery_site/js/contrib/jquery.fireOnDisable.js' %}"></script>
         <script src="{% static 'discovery_site/js/contrib/jquery.history.js' %}"></script>
+        <script src="{% static 'discovery_site/js/contrib/mediator.min.js' %}"></script>
 
+        <script src="{% static 'discovery_site/js/utility.js' %}"></script>
         <script src="{% static 'discovery_site/js/input-handler.js' %}"></script>
         <script src="{% static 'discovery_site/js/requests-manager.js' %}"></script>
         <script src="{% static 'discovery_site/js/layout-manager.js' %}"></script>
@@ -144,7 +146,7 @@
             </div><!--end footer<!-->
         </div><!--end footer_container<!-->
 
-        <script src="{% static 'discovery_site/js/contrib/mediator.min.js' %}"></script>
+
         {% block page_js %}
         {% endblock %}
         <script>
